nvidia-graphics-drivers (470.103.01-3) UNRELEASED; urgency=medium

  * dkms.conf: Use a BUILD_EXCLUSIVE equivalent hack to skip building for -rt
    kernels, not supported upstream (510.54-1).
  * Declare Testsuite: autopkgtest-pkg-dkms (510.54-1).

 -- Andreas Beckmann <anbe@debian.org>  Tue, 01 Mar 2022 22:35:09 +0100

nvidia-graphics-drivers (470.103.01-2) unstable; urgency=medium

  * Add xorg-video-abi-25 (Xorg Xserver 21) as alternative dependency.
    (Closes: #1005311)
  * nvidia-detect: Add support for (Tesla) 470 drivers in bullseye.

 -- Andreas Beckmann <anbe@debian.org>  Sun, 13 Feb 2022 23:20:24 +0100

nvidia-graphics-drivers (470.103.01-1) unstable; urgency=medium

  * New upstream production branch release 470.103.01 (2022-01-31).
    * Fixed CVE‑2022‑21813, CVE‑2022‑21814.  (Closes: #1004847)
      https://nvidia.custhelp.com/app/answers/detail/a_id/5312
    - Added support for the following GPUs: NVIDIA GeForce MX550,
      NVIDIA GeForce MX570, NVIDIA GeForce RTX 2050.

  [ Andreas Beckmann ]
  * Refresh patches.
  * Update nv-readme.ids.

 -- Andreas Beckmann <anbe@debian.org>  Thu, 03 Feb 2022 22:27:11 +0100

nvidia-graphics-drivers (470.94-1) unstable; urgency=medium

  * New upstream production branch release 470.94 (2021-12-13).
    - Added support for the following GPU: NVIDIA PG509-210.
    - Worked around an issue that prevented some games from flipping (and
      therefore taking advantage of G-SYNC and G-SYNC Compatible monitors) on
      certain desktops such as GNOME.

  [ Andreas Beckmann ]
  * Update nv-readme.ids.
  * Update lintian overrides.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 05 Jan 2022 04:08:50 +0100

nvidia-graphics-drivers (470.86-1) unstable; urgency=medium

  * New upstream production branch release 470.86 (2021-11-10).
    - Added support for the following GPUs: RTX A2000 12GB, RTX A4500,
      T400 4GB, T1000 8GB.

  [ Andreas Beckmann ]
  * Update nv-readme.ids.