@@ -200,10 +200,6 @@ fi
 			echo "Your card is supported by the Tesla 470 drivers series in buster-backports."
 			echo "See https://backports.debian.org for instructions how to use backports."
 			PACKAGE="nvidia-tesla-470-driver/buster-backports"
-		elif [[ -n ${VERSIONS[461]} ]]; then
-			echo "Your card is supported by the Tesla 460 drivers series in buster-backports."
-			echo "See https://backports.debian.org for instructions how to use backports."
-			PACKAGE="nvidia-tesla-460-driver/buster-backports"
 		elif [[ -n ${VERSIONS[451]} ]]; then
 			echo "Your card is supported by the Tesla 450 drivers series in buster-backports."
 			echo "See https://backports.debian.org for instructions how to use backports."
@@ -246,9 +242,6 @@ fi
 		elif [[ -n ${VERSIONS[471]} ]]; then
 			echo "Your card is supported by the Tesla 470 drivers series."
 			PACKAGE="nvidia-tesla-470-driver"
-		elif [[ -n ${VERSIONS[461]} ]]; then
-			echo "Your card is supported by the Tesla 460 drivers series."
-			PACKAGE="nvidia-tesla-460-driver"
 		elif [[ -n ${VERSIONS[451]} ]]; then
 			echo "Your card is supported by the Tesla 450 drivers series."
 			PACKAGE="nvidia-tesla-450-driver"
@@ -270,9 +263,6 @@ fi
 		fi
 		if [ -n "$PACKAGE" ] && [ "$PACKAGE" != "nvidia-tesla-470-driver" ] && [[ -n ${VERSIONS[471]} ]]; then
 			echo "Your card is also supported by the Tesla 470 drivers series."
-		fi
-		if [ -n "$PACKAGE" ] && [ "$PACKAGE" != "nvidia-tesla-460-driver" ] && [[ -n ${VERSIONS[461]} ]]; then
-			echo "Your card is also supported by the Tesla 460 drivers series."
 		fi
 		if [ -n "$PACKAGE" ] && [ "$PACKAGE" != "nvidia-tesla-450-driver" ] && [[ -n ${VERSIONS[451]} ]]; then
 			echo "Your card is also supported by the Tesla 450 drivers series."
@@ -299,9 +289,6 @@ fi
 		elif [[ -n ${VERSIONS[471]} ]]; then
 			echo "Your card is supported by the Tesla 470 drivers series."
 			PACKAGE="nvidia-tesla-470-driver"
-		elif [[ -n ${VERSIONS[461]} ]]; then
-			echo "Your card is supported by the Tesla 460 drivers series."
-			PACKAGE="nvidia-tesla-460-driver"
 		elif [[ -n ${VERSIONS[451]} ]]; then
 			echo "Your card is supported by the Tesla 450 drivers series."
 			PACKAGE="nvidia-tesla-450-driver"
@@ -323,9 +310,6 @@ fi
 		fi
 		if [ -n "$PACKAGE" ] && [ "$PACKAGE" != "nvidia-tesla-470-driver" ] && [[ -n ${VERSIONS[471]} ]]; then
 			echo "Your card is also supported by the Tesla 470 drivers series."
-		fi
-		if [ -n "$PACKAGE" ] && [ "$PACKAGE" != "nvidia-tesla-460-driver" ] && [[ -n ${VERSIONS[461]} ]]; then
-			echo "Your card is also supported by the Tesla 460 drivers series."
 		fi
 		if [ -n "$PACKAGE" ] && [ "$PACKAGE" != "nvidia-tesla-450-driver" ] && [[ -n ${VERSIONS[451]} ]]; then
 			echo "Your card is also supported by the Tesla 450 drivers series."
