@@ -3,6 +3,7 @@ nvidia-graphics-drivers (470.103.01-3) UNRELEASED; urgency=medium
   * dkms.conf: Use a BUILD_EXCLUSIVE equivalent hack to skip building for -rt
     kernels, not supported upstream (510.54-1).
   * Declare Testsuite: autopkgtest-pkg-dkms (510.54-1).
+  * nvidia-detect: Drop support for Tesla 460 drivers (EoL).
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 01 Mar 2022 22:35:09 +0100
 
